# nvw

./: AGENTS.md  Cargo.toml  pyproject.toml  server.db
cli/: Cargo.toml
cli/src/: client.rs  main.rs
proto/: Cargo.toml
proto/src/: lib.rs
res/: beidou.rs
scripts/: gen_by_fly.py  gen_py_fly.py  process_tle.py
server/: Cargo.toml
server/migrations/00000000000001_init/: down.sql  up.sql
server/src/: app.rs  main.rs  schema.rs
server/src/controller/: mod.rs  task_controller.rs  version_controller.rs
server/src/cron/: mod.rs  retry_cron.rs  timeout_cron.rs
server/src/repository/: lease_repo.rs  mod.rs  result_repo.rs  task_repo.rs
server/src/service/: mod.rs  task_service.rs
worker/: Cargo.toml
worker/src/: main.rs  optimize.rs  solver.rs
worker/src/data/: mod.rs
worker/src/problem/: laser.rs  mod.rs  sense.rs
worker/src/solver/: mod.rs  stepped_particleswarm.rs
worker/src/utils/: mod.rs  predict.rs
