[workspace]
members = ["worker"]
resolver = "3"

[workspace.dependencies]
axum = { version = "0.8.4", features = ["macros"] }
argmin = { version = "0.11.0", features = ["rayon"] }
argmin-math = { version = "0.5.1", features = ["nalgebra_latest"] }
argmin-observer-slog = "0.2.0"
nalgebra = "0.34.1"
argmin_testfunctions = "0.3.0"
rand = "0.9.2"
rand_xoshiro = "0.8.0"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.18"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
diesel = { version = "2.3.2", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2.3.0"
proto = { path = "proto" }
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
approx = "0.5.1"
anyhow = "1.0.102"
itertools = "0.14.0"
poliastrs = { git = "https://github.com/k88936/poliastrs.git" }
