[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
argmin.workspace = true
argmin-math.workspace = true
argmin_testfunctions.workspace = true
rand.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
proto.workspace = true
reqwest.workspace = true
serde.workspace = true
approx.workspace = true
nalgebra.workspace = true
anyhow.workspace = true
